demo4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollo-demo-4
  namespace: rollo-demo
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollo-demo-4
