demo4/services.yaml
# Demo 4: stable and canary Services.
# ingress-use-waypoint: Istio ingress sends N-S traffic through the waypoint (L7 split).
apiVersion: v1
kind: Service
metadata:
  name: rollo-demo-4-stable
  namespace: argo-rollouts-demo-4
  labels:
    istio.io/ingress-use-waypoint: "true"
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollo-demo-4
---
apiVersion: v1
kind: Service
metadata:
  name: rollo-demo-4-canary
  namespace: argo-rollouts-demo-4
  labels:
    istio.io/ingress-use-waypoint: "true"
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollo-demo-4
