demo4/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rollo-demo-4
  namespace: rollo-demo
spec:
  to:
    kind: Service
    name: rollo-demo-4
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
